--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -6,10 +6,21 @@
   border-radius: 4px;
   padding: 1rem;
   padding-top: 0.5rem;
-  min-width: 17rem;
   z-index: 1;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 6px,
     rgba(0, 0, 0, 0.07) 0px 0px 0px 1px;
+  animation: fade-in 0.2s cubic-bezier(0, 0, 0.4, 1.5);
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .dpd .monthPicker {
@@ -49,8 +60,9 @@
 }
 .dpd .dayLabel {
   flex-basis: 14.2857%;
+  min-width: 14.2857%;
   text-align: center;
-  font-size: 0.6rem;
+  font-size: 0.65rem;
   font-weight: 600;
   letter-spacing: 0.04rem;
 }
@@ -58,15 +70,15 @@
 .dpd .dateLabels {
   display: flex;
   flex-wrap: wrap;
-  border-left: 1px solid linen;
-  border-top: 1px solid linen;
+  border-left: 1px solid #f1f1f1;
+  border-top: 1px solid #f1f1f1;
 }
 
 .dpd .dateLabel {
-  min-width: 2.1rem;
   flex-basis: 14.2857%;
-  border-bottom: 1px solid linen;
-  border-right: 1px solid linen;
+  min-width: 14.2857%;
+  border-bottom: 1px solid #f1f1f1;
+  border-right: 1px solid #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +87,7 @@
   cursor: pointer;
 }
 
-.dpd .dateLabel:hover {
+.dpd .dateLabel:not(.currentDay):hover {
   background-color: #f1f1f1;
 }
 
@@ -91,6 +103,7 @@
   border-bottom: 0.75em solid lightseagreen;
   border-left: 0.75em solid transparent;
   border-top: 0.75em solid transparent;
+  background-color: transparent;
 }
 
 .dpd .notInMonth {
@@ -98,6 +111,6 @@
 }
 
 .dpd .currentDay {
-  background-color: black;
-  color: white;
+  background-color: #000;
+  color: #fff;
 }
